--- a/estilos.css
+++ b/estilos.css
@@ -1,291 +1,17 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-body,
-html {
-  scroll-behavior: smooth;
-  height: 100%; /* Asegura que body y html ocupen toda la altura de la pantalla */
-}
-
 header {
-  background-color: #f0f0f0;
+  background-color: red;
   height: 60px;
-  width: 100%;
-  font-size: 20px;
-  padding: 10px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  position: fixed;
 }
-
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: space-around;
-}
-
-nav li {
-  padding: 10px 15px;
-}
-
-nav a {
-  text-decoration: none;
-  /*color: #fff;*/
-}
-
-nav a:hover {
-  color: aqua;
-}
-
-main {
-  display: flex;
-  height: 100%;
-}
-
-/*------------------------------------------------------------------*/
 
 aside {
-  margin-top: 60px;
-  margin-bottom: 70px;
-  background-color: #d3cdcd;
-  width: 35%; /* Ocupa el 35% del contenedor */
-  padding: 20px 10px 10px;
-
-  height: 100%;
+  background-color: aqua;
 }
-
-aside h1 {
-  text-align: center;
-  padding-bottom: 10px;
-}
-
-aside p {
-  padding: 10px;
-}
-
-/*------------------------------------------------------------------*/
 
 article {
-  height: 100%;
-  margin-top: 60px;
-  margin-bottom: 70px;
-  flex: 1; /* Ocupa el resto del espacio disponible */
-  padding: 10px;
-
-  background-image: url(img/fondo.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
-}
-
-article .buscar {
-  /*border: black solid 2px;*/
-  text-align: right;
-}
-
-.buscar input {
-  border: black solid 2px;
-  font-size: 20px;
-}
-
-.confi {
-  margin: 0 10px 0 20px;
-}
-
-article i {
-  font-size: 30px;
-  background-color: #ffffff;
-  padding: 10px;
-  border-radius: 25px;
-  border: black solid 1px;
-}
-
-h2 {
-  margin-top: 120px;
-  margin-left: 50px;
-}
-
-section {
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 20px;
-}
-
-section div {
-  text-align: center;
-}
-
-section div img {
-  height: 100px;
-  width: 100px;
-  background-size: cover;
-}
-
-h4 {
-  border: black solid 1px;
-  background-color: #ffffff;
-  padding: 3px;
-  margin-top: 5px;
-}
-
-/*------------------------------------------------------------------*/
-
-.contacto {
-  height: 100%;
-  width: 100%;
-  text-align: center;
-  margin-top: 150px;
-}
-
-section h1 {
-  margin-top: 70px;
-}
-
-.contacto textarea {
-  margin-bottom: 20px;
-}
-
-.login {
-  height: 100%;
-  width: 100%;
-  text-align: center;
-  margin-top: 150px;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 50%;
-  border: black solid 2px;
-  padding: 50px;
-  border-radius: 10px;
-}
-
-.contacto form {
-  height: 70%;
-}
-
-label {
-  display: block;
-  margin-bottom: 10px;
-}
-
-form input {
-  padding: 8px;
-  margin-bottom: 20px;
-  border: 1px solid black;
-  border-radius: 4px;
-  width: 100%;
-}
-
-button {
-  padding: 10px 20px;
-  background-color: #c2c2c2;
-  color: black;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #a4a4a4;
-}
-
-/*------------------------------------------------------------------*/
-
-.conocer {
-  background-image: none;
-  border: none;
-}
-
-.nosotros {
-  text-align: center;
-  display: flex;
-}
-
-.conocer h1 {
-  text-align: center;
-  margin-top: 50px;
-  margin-bottom: 20px;
-}
-
-.nosotros section {
-  border: black solid 2px;
-  width: 40%;
-  border-radius: 10px;
-  display: inline-block;
-  text-align: center;
-  padding: 20px;
-}
-
-.nosotros section h2 {
-  text-align: center;
-  width: 100%;
-  margin: 20px 0;
-}
-
-.nosotros section p {
-  text-align: center;
-  margin: 20px 0;
-}
-
-/*------------------------------------------------------------------*/
-.product {
-    background-image: none;
-    text-align: center;
-}
-
-.producto {
-    width: 80%;
- 
-    text-align: center;
-    display: inline-block;
-}
-
-.producto h1 {
-  text-align: center;
-  margin-top: 40px;
-  margin-bottom: 10px;
-}
-
-/*------------------------------------------------------------------*/
-
-.redes {
-  text-align: right;
-  margin-top: 20px;
-  position: fixed;
-  bottom: 50px;
-  right: 40px;
-}
-
-.redes i {
-  font-size: 30px;
-  padding: 10px;
-  border-radius: 25px;
-  border: black solid 1px;
-}
-
-/*------------------------------------------------------------------*/
-
-footer {
-  background-color: #f0f0f0;
-  width: 100%;
-  position: fixed;
-  bottom: 0px;
+  background-color: blue;
 }
 
 footer {
-  border: black solid 1px;
-}
-
-footer p {
-  text-align: center;
-  padding: 10px;
+  background-color: blueviolet;
+  height: 40px;
 }
