V8-Responsive design Login

--- a/estilos.css
+++ b/estilos.css
@@ -2,8 +2,8 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-html, body {
-  min-height: 100%;
+main {
+  height: 100%;
 }
 
 .navbar {
@@ -24,7 +24,7 @@ html, body {
 
 /* Index Inicio */
 aside {
-  background-color: coloFondoAside;
+  background-color: #d3cdcd;
 }
 
 aside h1 {
@@ -76,21 +76,23 @@ h4 {
   margin-top: 5px;
 }
 
-.redes {
-  text-align: right;
-  margin-top: 40px;
-  margin-bottom: 20px;
+.txt {
+  text-align: left;
 }
 
+.redes {
+  text-align: right;
+}
+
+/*
 .redes i {
-  background-color: #ffffff;
+  background-color: $colorFondoAnuncios;
   font-size: 30px;
   padding: 10px;
   border-radius: 25px;
-  border: black solid 1px;
+  border: $colorBordes solid 1px;
   margin-top: 5px;
-}
-
+}*/
 /* Index FIN */
 /* Productos Inicio */
 .producto h1 {
@@ -101,21 +103,26 @@ h4 {
 
 /* Productos FIN */
 /* Login Inicio */
-.login {
-  height: 100%;
-  width: 100%;
+form {
+  border: black solid 1px;
 }
 
+form input {
+  border: 1px solid black !important;
+}
+
+/*
 .titulo {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
+*/
 /* Login FIN */
 footer {
   background-color: #f0f0f0;
-  height: 40px;
+  position: fixed;
+  bottom: 0;
 }
 
 @media only screen and (min-width: 0) and (max-width: 768px) {
@@ -124,9 +131,25 @@ footer {
     margin-bottom: 20px;
   }
 }
+@media only screen and (min-width: 0) and (max-width: 768px) {
+  .txt {
+    text-align: center;
+  }
+  .redes {
+    text-align: center;
+  }
+  .login {
+    margin-top: 5px !important;
+    margin-bottom: 100px !important;
+  }
+  .login h1 {
+    padding-bottom: 10px;
+  }
+}
+/*
 @media only screen and (min-width: 769px) {
   .redes {
     margin-top: 80px;
     margin-bottom: 20px;
   }
-}/*# sourceMappingURL=estilos.css.map */
+}*//*# sourceMappingURL=estilos.css.map */
