--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,7 @@
 * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -77,22 +80,13 @@ h4 {
 }
 
 .txt {
-  text-align: left;
-}
-
-.redes {
   text-align: right;
 }
 
-/*
-.redes i {
-  background-color: $colorFondoAnuncios;
-  font-size: 30px;
-  padding: 10px;
-  border-radius: 25px;
-  border: $colorBordes solid 1px;
-  margin-top: 5px;
-}*/
+.redes {
+  text-align: left;
+}
+
 /* Index FIN */
 /* Productos Inicio */
 .producto h1 {
@@ -111,17 +105,10 @@ form input {
   border: 1px solid black !important;
 }
 
-/*
-.titulo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-*/
 /* Login FIN */
 footer {
   background-color: #f0f0f0;
-  position: fixed;
+  position: sticky;
   bottom: 0;
 }
 
@@ -140,7 +127,6 @@ footer {
   }
   .login {
     margin-top: 5px !important;
-    margin-bottom: 100px !important;
   }
   .login h1 {
     padding-bottom: 10px;
